Added search endpoint
